# SN123

./: .gitignore  ACTION_CHECKLIST.md  API_KEYS_SETUP.md  BACKGROUND_TUNING_GUIDE.md  BTCLBFGS_RESULTS_ANALYSIS.md  COMPLETE_ROADMAP_TO_FIRST_PLACE.md  DATA_COLLECTION_GUIDE.md  EXECUTE_PLAN.sh  EXPECTED_RESULTS_VISUAL_GUIDE.md  FIRST_PLACE_GUIDE.md  GPU_BEFORE_AFTER.md  GPU_OPTIMIZATION_SUMMARY.md  GPU_SETUP.md  GPU_TRAINING_SOLUTION.md  GPU_TUNING_GUIDE.md  GPU_USAGE_REPORT.md  HYPERPARAMETER_TUNING_ASSESSMENT.md  HYPERPARAMETER_TUNING_GUIDE.md  HYPERPARAMETER_TUNING_QUICK_START.md  HYPERPARAMETER_TUNING_RECOMMENDATION.md  HYPERPARAMETER_TUNING_STRATEGY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  IMPROVE_MODEL.md  LOCAL_TESTING_BEFORE_MAINNET.md  LOCAL_TESTING_COMPLETE_GUIDE.md  MASTER_GUIDE_TO_FIRST_PLACE.md  MINING_IMPLEMENTATION_GUIDE.md  MINING_QUICK_START.md  NEXT_STEPS.md  QUICK_START.md  QUICK_START_PATH_TO_FIRST_PLACE.md  READ_ME_FIRST.md  RESULTS_ANALYSIS.md  RESULT_ANALYSIS.md  RUNNING_NOW.md  SALIENCE_OPTIMIZATION_GUIDE.md  START_HERE.md  START_HERE_COMPLETE.md  (+62 more)
data/: BTC_1h.csv  ETH_1h.csv
data/BTC/: funding_rates.csv  ohlcv.csv
data/ETH/: funding_rates.csv  ohlcv.csv
mining/: __init__.py  miner.py
models/tuned/: training_results.json
models/tuning/: best_configs_20251208_051555.json  best_configs_20251208_152021.json  best_configs_20251209_173908.json  tuning_results.json  tuning_results_20251208_051555.json  (+2 more)
scripts/: generate_embeddings_from_models.py  test_class_balance.py
scripts/testing/: __init__.py  (+5 more)
(+406 files in other folders)
